k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radiology-manager
  namespace: default
  labels:
    app: radiology-manager
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: radiology-manager
  type: ClusterIP
