k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: default
  labels:
    app: db
spec:
  ports:
    - port: 5432
      targetPort: 5432
      name: postgres
  selector:
    app: db
  type: ClusterIP
