k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radiology-manager-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: radiology.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radiology-manager
                port:
                  number: 8080
